--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
-<h1>Hello World!!!</h1>
-<h1>Workshop Todo List</h1>
+<html>
+    <head>
+        <title>My To-Do List</title>
+    </head>
+<body>
+    <h1>Hello World!!!</h1>
+    <h1>Workshop Todo List</h1>
 <ul>
     <li>Make the curriculum 4 pomodoros</li>
     <li>Buy workshop supplies 3 pomodoros</li>
@@ -10,3 +15,5 @@
     <li>Have a great workshop 0 pomodoros</li>
 </ul>
 Add todo
+</body>
+</hmtl>
