new.html and new.css

--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
             Have a great workshop </a>
             <span class="pomodoro-estimate">0 pomodoros</span>
             </li>
-            
         </ul>
-        Add todo
+        <a href="new.html"> Add To-Do</a>
     </body>
 </hmtl>
